--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <header>
-        <h1>The Threat of Environmental Problems</h1>
+        <h1>Environmental Protection</h1>
     </header>
 
     <nav>
