--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Best Experinced Freelancer Here
+                Our Goal
               </h2>
             </div>
             <p>
