--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Best Experinced Freelancer Here
+                Our Goal
               </h2>
             </div>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+              Welcome to our website for environmental protection, where we are committed to safeguarding our planet and fostering a sustainable future. Our website serves as a vibrant platform for information, advocacy, and action against the pressing environmental challenges that face our global community toady. 
             </p>
             <div class="btn-box">
               <a href="" class="btn-1">
