--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Spering</title>
+  <title>PlanetFuture</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -103,11 +103,14 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Best Experinced Freelancer Here
+                Our Goal
               </h2>
             </div>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+              Welcome to our website for environmental protection, where we are committed to safeguarding our planet and fostering a sustainable future. Our website serves as a vibrant platform for information, advocacy, and action against the pressing environmental challenges that face our global community toady. 
+            </p>
+            <p>
+              Current environmental issues need immediate attention and action. From the increasing crisis of climate change to critical pollution levels affecting air, water, and soil, our plane is sending clear signals that we must intervene. These urgent issues, alongside threats like deforestation and biodiversity loss, are highlighted prominently on our site to educate and inspire proactive community involvement.
             </p>
             <div class="btn-box">
               <a href="" class="btn-1">
@@ -140,10 +143,10 @@
       </div>
       <div class="detail-box">
         <h2>
-          About Spering Company
+          About PlanetFuture
         </h2>
         <p>
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If youThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you
+          PlanetFuture is a website created by two highschool students from Beijing National Day School. We believe that everyone has a role to play in environmental protection. That is why we offer a variety of initiative designed to engage our visitors. Whether you are looking to volunteer in local clean-up projects, contribute through donations, or participate in policy advocacy efforts, there are numerous opportunities to make a tangible impact. We encourage you to explore this initiative and join us in our mission to create a healthier, more sustainable world. together, we can turn awareness into action and ensure a thriving planet for future generations.
         </p>
         <a href="">
           Read More
