--- a/about.html
+++ b/about.html
@@ -166,25 +166,8 @@
           <div class="info_logo">
             <img src="images/logo.png" alt="" />
             <span>
-              Spering
+              PlanetFuture
             </span>
-          </div>
-          <div class="social_box">
-            <a href="#">
-              <img src="images/fb.png" alt="">
-            </a>
-            <a href="#">
-              <img src="images/twitter.png" alt="">
-            </a>
-            <a href="#">
-              <img src="images/linkedin.png" alt="">
-            </a>
-            <a href="#">
-              <img src="images/instagram.png" alt="">
-            </a>
-            <a href="#">
-              <img src="images/youtube.png" alt="">
-            </a>
           </div>
         </div>
 
@@ -215,10 +198,10 @@
 
             <div class="col-md-3 col-lg-2 offset-lg-1">
               <h5>
-                Information
+                Created By
               </h5>
               <p>
-                Readable content of a page when looking at its layoutreadable content of a page when looking at its layout
+                Sophie Ren & Loretta Bai
               </p>
             </div>
 
@@ -257,7 +240,7 @@
   <script src="js/bootstrap.js"></script>
   <script src="js/custom.js"></script>
 
-
+  
 </body>
 </body>
 
