--- a/about.html
+++ b/about.html
@@ -228,8 +228,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
       </p>
     </div>
   </footer>
