--- a/work.html
+++ b/work.html
@@ -197,7 +197,7 @@
           <div class="info_logo">
             <img src="images/logo.png" alt="" />
             <span>
-              Spering
+              Different Types of Pollution
             </span>
           </div>
           <div class="social_box">
@@ -330,8 +330,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
       </p>
     </div>
   </footer>
