--- a/category.html
+++ b/category.html
@@ -22,6 +22,67 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f2f5;
+      margin: 0;
+      padding: 0;
+    }
+    .category_section {
+      padding: 50px 0;
+    }
+    .heading_container {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .heading_container h2 {
+      font-size: 36px;
+      color: #333;
+    }
+    .category_container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      justify-items: center;
+    }
+    .box {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
+      width: 100%;
+      max-width: 300px;
+      text-align: center;
+      transition: transform 0.3s;
+    }
+    .box:hover {
+      transform: translateY(-10px);
+    }
+    .img-box {
+      height: 200px;
+      overflow: hidden;
+    }
+    .img-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .detail-box {
+      padding: 20px;
+    }
+    .detail-box h5 {
+      font-size: 22px;
+      margin: 10px 0;
+      color: #333;
+    }
+    .detail-box p {
+      font-size: 16px;
+      color: #666;
+      text-align: left;
+    }
+  </style>
 </head>
 
 <body class="sub_page">
@@ -92,75 +153,51 @@
 
   <section class="category_section layout_padding">
     <div class="container">
+      <!-- Heading Container -->
       <div class="heading_container">
-        <h2>
-          Category
-        </h2>
+        <h2>Service Page</h2>
       </div>
+      <!-- Category Container -->
       <div class="category_container">
+        <!-- Climate Change Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/c1.png" alt="">
+            <img src="images/climate_change.png" alt="Climate Change">
           </div>
           <div class="detail-box">
-            <h5>
-              Design & Arts
-            </h5>
+            <h5>Climate Change</h5>
+            <p>
+              Climate change is a crucial issue in the sector of environmental protection. The cause of climate change is attributed to human activities, like burning fossil fuels, which release greenhouse gases into the atmosphere. These gases disturb the natural climate system of the earth and increase surface temperature. The consequences include increasing global temperatures, melting glaciers, and rising sea levels, posing a significant threat to ecosystems and human well-being.
+            </p>
           </div>
         </div>
+        <!-- Pollution Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/c2.png" alt="">
+            <img src="images/pollution.png" alt="Pollution">
           </div>
           <div class="detail-box">
-            <h5>
-              Web Development
-            </h5>
+            <h5>Pollution</h5>
+            <p>
+              Pollution is a multifaceted environmental issue that includes air, water, and soil pollution, each arising from various human activities. Air pollution is primarily caused by emissions from cars, industrial processes, and burning fossil fuels. Water pollution can come from agricultural runoff, industrial discharges, and improper waste disposal. Soil pollution results from the use of pesticides, industrial waste, and deforestation. These actions degrade land and food quality, posing a significant threat to ecosystems, human health, and animals worldwide.
+            </p>
           </div>
         </div>
+        <!-- Deforestation Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/c3.png" alt="">
+            <img src="images/deforestation.png" alt="Deforestation">
           </div>
           <div class="detail-box">
-            <h5>
-              SEO Markting
-            </h5>
+            <h5>Deforestation</h5>
+            <p>
+              Deforestation arises from several human activities, such as logging, agriculture, and urbanization, contributing to the excessive cutting of trees. This affects the balance of ecosystems, leading to habitat loss for animals and a decrease in biodiversity. Trees generate oxygen, retain moisture, and prevent land desertification. Therefore, deforestation significantly lowers living standards for humans and causes health problems.
+            </p>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/c4.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Video Edting
-            </h5>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/c5.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Logo Design
-            </h5>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/c6.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Game Design
-            </h5>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
+  
   <!-- end category section -->
 
   <!-- info section -->
