--- a/category.html
+++ b/category.html
@@ -162,7 +162,7 @@
         <!-- Climate Change Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/climate_change.png" alt="Climate Change">
+            <img src="Picture-environment/climate_change.png" alt="Climate Change">
           </div>
           <div class="detail-box">
             <h5>Climate Change</h5>
@@ -174,7 +174,7 @@
         <!-- Pollution Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/pollution.png" alt="Pollution">
+            <img src="Picture-environment/pollution.png" alt="Pollution">
           </div>
           <div class="detail-box">
             <h5>Pollution</h5>
@@ -186,7 +186,7 @@
         <!-- Deforestation Box -->
         <div class="box">
           <div class="img-box">
-            <img src="images/deforestation.png" alt="Deforestation">
+            <img src="Picture-environment/deforestation.png" alt="Deforestation">
           </div>
           <div class="detail-box">
             <h5>Deforestation</h5>
