--- a/category.html
+++ b/category.html
@@ -155,7 +155,7 @@
     <div class="container">
       <!-- Heading Container -->
       <div class="heading_container">
-        <h2>Service Page</h2>
+        <h2>Different Types of Pollution</h2>
       </div>
       <!-- Category Container -->
       <div class="category_container">
