--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Spering</title>
+  <title>PlanetFuture</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -99,7 +99,7 @@
             <div class="detail-box">
               <div class="heading_container">
                 <h2>
-                  Work Freelaner Has Done
+                  Charity
                 </h2>
               </div>
               <div class="tab_container">
@@ -109,10 +109,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      $250 Million
+                      Non-Profit Organization
                     </h5>
                     <h3>
-                      Paid to Freelancers
+                      <a href="https://www.amazonteam.org/">Amazon Conservative Team (ACT)</a>
                     </h3>
                   </div>
                 </div>
