--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              Spering
+              FuturePlanet
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,10 +122,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      2 Million
+                      An environmental defense group
                     </h5>
                     <h3>
-                      Paid Invoices
+                      <a href="https://rewildingeurope.com/rewilding-in-action/wilder-nature/?gad_source=1&gclid=EAIaIQobChMI9uPY_5WNhgMV9RCtBh2W7Q8BEAAYASAAEgKoh_D_BwE">Rewilding Europe</a>
                     </h3>
                   </div>
                 </div>
@@ -135,10 +135,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      700,000
+                      Creates healthy and resilient forests, from cities to wilderness, that deliver essential benefits for climate, people, water and wildlife
                     </h5>
                     <h3>
-                      Worldwide Freelancer
+                      <a href="https://www.americanforests.org/newsroom/national-extreme-heat-media-resource-hub/?gad_source=1&gclid=EAIaIQobChMIlIL7u5ONhgMVryKtBh3i6ANdEAAYASAAEgLkDvD_BwE">American Forest</a>
                     </h3>
                   </div>
                 </div>
@@ -148,11 +148,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      98%
+                      Works to secure a future for all species, great and small, hovering on the brink of extinction, through science, law and creative media, with a focus on protecting the lands, waters and climate that species need to survive
                     </h5>
                     <h3>
-                      Customer <br>
-                      Satisfaction Rate
+                      <a href="https://act.biologicaldiversity.org/8ghMb1Mi-ECYIDcZzcYM5w2">Center of Biodiversity</a>
                     </h3>
                   </div>
                 </div>
