--- a/work.html
+++ b/work.html
@@ -135,7 +135,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      Creates healthy and resilient forests, from cities to wilderness, that deliver essential benefits for climate, people, water and wildlife
+                      Creates healthy and resilient forests
                     </h5>
                     <h3>
                       <a href="https://www.americanforests.org/newsroom/national-extreme-heat-media-resource-hub/?gad_source=1&gclid=EAIaIQobChMIlIL7u5ONhgMVryKtBh3i6ANdEAAYASAAEgLkDvD_BwE">American Forest</a>
@@ -148,7 +148,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      Works to secure a future for all species, great and small, hovering on the brink of extinction, through science, law and creative media, with a focus on protecting the lands, waters and climate that species need to survive
+                      Works to secure a future for all species
                     </h5>
                     <h3>
                       <a href="https://act.biologicaldiversity.org/8ghMb1Mi-ECYIDcZzcYM5w2">Center of Biodiversity</a>
