--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>PlanetFuture</title>
+  <title>FuturePlanet</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -33,7 +33,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              PlanetFuture
+              FuturePlanet
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,10 +135,10 @@
       </div>
       <div class="detail-box">
         <h2>
-          About PlanetFuture
+          About FuturePlanet
         </h2>
         <p>
-          PlanetFuture is a website created by two highschool students from Beijing National Day School. We believe that everyone has a role to play in environmental protection. That is why we offer a variety of initiative designed to engage our visitors. Whether you are looking to volunteer in local clean-up projects, contribute through donations, or participate in policy advocacy efforts, there are numerous opportunities to make a tangible impact. We encourage you to explore this initiative and join us in our mission to create a healthier, more sustainable world. together, we can turn awareness into action and ensure a thriving planet for future generations.
+          FuturePlanet is a website created by two highschool students from Beijing National Day School. We believe that everyone has a role to play in environmental protection. That is why we offer a variety of initiative designed to engage our visitors. Whether you are looking to volunteer in local clean-up projects, contribute through donations, or participate in policy advocacy efforts, there are numerous opportunities to make a tangible impact. We encourage you to explore this initiative and join us in our mission to create a healthier, more sustainable world. together, we can turn awareness into action and ensure a thriving planet for future generations.
         </p>
       </div>
     </div>
@@ -155,7 +155,7 @@
           <div class="info_logo">
             <img src="images/logo.png" alt="" />
             <span>
-              PlanetFuture
+              FuturePlanet
             </span>
           </div>
         </div>
