--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
+        &copy; <span id="displayDate"></span> All Rights Reserved By FuturePlanet
       </p>
     </div>
   </footer>
