--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Design & Arts
+              Save Water
             </h5>
           </div>
         </div>
@@ -271,7 +271,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Web Development
+              Use Eco-friendly packages
             </h5>
           </div>
         </div>
@@ -281,7 +281,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              SEO Markting
+              Reduce carbon footprints
             </h5>
           </div>
         </div>
@@ -291,7 +291,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Video Edting
+              Save Water
             </h5>
           </div>
         </div>
@@ -301,7 +301,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Logo Design
+              Plant more trees
             </h5>
           </div>
         </div>
@@ -311,7 +311,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Game Design
+              Reduce, reuse and recycle
             </h5>
           </div>
         </div>
@@ -322,32 +322,6 @@
 
   <!-- end category section -->
 
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-lg-9 mx-auto">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="detail-box">
-        <h2>
-          About Spering Company
-        </h2>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If youThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-        </p>
-        <a href="">
-          Read More
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
 
   <!-- freelance section -->
 
