--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              Futureplanet
+              FuturePlanet
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,6 +86,7 @@
       </div>
     </header>
     <!-- end header section -->
+    
     <!-- slider section -->
     <section class="slider_section ">
       <div class="carousel_btn-container">
@@ -109,22 +110,13 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      You Can <br>
-                      Hire Freelancer <br>
-                      Here
+                      The world produces around <br>
+                      350 million <br>
+                      tonnes of plastic waste each year
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by
-                      the readable content of a page
+                      Join the fight against plastic pollution - together, we can make a lasting impact for the ocean
                     </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        About Us
-                      </a>
-                      <a href="" class="btn-2">
-                        Get A Quote
-                      </a>
-                    </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
@@ -141,22 +133,13 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      You Can <br>
-                      Hire Freelancer <br>
-                      Here
+                      About <br>
+                      11,200 vertebrates <br>
+                      were on the Red List
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by
-                      the readable content of a page
+                      Act now to save endangered species from extinction - their survival depends on our collective efforts.
                     </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        About Us
-                      </a>
-                      <a href="" class="btn-2">
-                        Get A Quote
-                      </a>
-                    </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
@@ -173,22 +156,13 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      You Can <br>
-                      Hire Freelancer <br>
-                      Here
+                      The global average carbon dioxide is <br>
+                      419.3 parts per million <br>
+                      setting a new world record
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by
-                      the readable content of a page
+                      Take action today to reduce CO2 emissions and secure a cleaner, greener future for generations to come
                     </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        About Us
-                      </a>
-                      <a href="" class="btn-2">
-                        Get A Quote
-                      </a>
-                    </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
@@ -251,7 +225,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Category
+          Ways to protect the environment
         </h2>
       </div>
       <div class="category_container">
@@ -291,7 +265,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Save Water
+              Volunteer for cleanups in your community
             </h5>
           </div>
         </div>
@@ -555,7 +529,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
+        &copy; <span id="displayDate"></span> All Rights Reserved By FuturePlanet
       </p>
     </div>
   </footer>
