--- a/work.html
+++ b/work.html
@@ -105,7 +105,7 @@
               <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/f1.png" alt="">
+                    <img src="images/f1.jpg.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   <div class="img-box">
-                    <img src="images/f2.png" alt="">
+                    <img src="images/f2.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   <div class="img-box">
-                    <img src="images/f3.png" alt="">
+                    <img src="images/f3.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   <div class="img-box">
-                    <img src="images/f4.png" alt="">
+                    <img src="images/f4.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -161,22 +161,22 @@
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
+                <img src="picture-charity/ACT.png" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
+                <img src="picture-charity/rewilding.png" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
+                <img src="picture-charity/forest.png" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseFour" aria-labelledby="headingfour" data-parent="#accordion">
               <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
+                <img src="picture-charity/biodiversity.png" alt="">
               </div>
             </div>
           </div>
