--- a/work.html
+++ b/work.html
@@ -55,16 +55,6 @@
                 <a class="nav-link" href="category.html"> Category </a>
               </li>
             </ul>
-            <div class="user_option">
-              <a href="">
-                <span>
-                  Login
-                </span>
-              </a>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
           </div>
           <div>
             <div class="custom_menu-btn ">
@@ -105,7 +95,7 @@
               <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/f1.jpg.png" alt="">
+                    <img src="images/f1.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -118,7 +108,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   <div class="img-box">
-                    <img src="images/f2.jpg" alt="">
+                    <img src="images/f2.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -131,7 +121,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   <div class="img-box">
-                    <img src="images/f3.jpg" alt="">
+                    <img src="images/f3.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -144,7 +134,7 @@
                 </div>
                 <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   <div class="img-box">
-                    <img src="images/f4.jpg" alt="">
+                    <img src="images/f4.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -258,7 +248,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
+        &copy; <span id="displayDate"></span> All Rights Reserved By FuturePlanet
       </p>
     </div>
   </footer>
