--- a/category.html
+++ b/category.html
@@ -94,7 +94,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              PlanetFuture
+              FuturePlanet
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,10 +110,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html">Work </a>
+                <a class="nav-link" href="work.html">Charity </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="category.html"> Category </a>
+                <a class="nav-link" href="category.html"> Knowledge </a>
               </li>
             </ul>
             <div class="user_option">
@@ -155,7 +155,7 @@
     <div class="container">
       <!-- Heading Container -->
       <div class="heading_container">
-        <h2>Different Types of Pollution</h2>
+        <h2>Our planet is experiencing......</h2>
       </div>
       <!-- Category Container -->
       <div class="category_container">
@@ -220,7 +220,7 @@
             <div class="col-md-3 col-lg-2">
               <div class="info_link-box">
                 <h5>
-                  Useful Link
+                  Quick Navigation
                 </h5>
                 <ul>
                   <li class=" active">
@@ -230,10 +230,10 @@
                     <a class="" href="about.html">About </a>
                   </li>
                   <li class="">
-                    <a class="" href="work.html">Work </a>
+                    <a class="" href="work.html">Charity </a>
                   </li>
                   <li class="">
-                    <a class="" href="category.html">Category </a>
+                    <a class="" href="category.html">Knowledge </a>
                   </li>
                 </ul>
               </div>
@@ -245,7 +245,9 @@
                 Created By
               </h5>
               <p>
-                Sophie Ren & Loretta Bai
+                Sophie Ren <hr>
+                & <hr>
+                Loretta Bai
               </p>
             </div>
 
@@ -272,7 +274,7 @@
   <footer class="container-fluid footer_section ">
     <div class="container">
       <p>
-        &copy; <span id="displayDate"></span> All Rights Reserved By PlanetFuture
+        &copy; <span id="displayDate"></span> All Rights Reserved By FuturePlanet
       </p>
     </div>
   </footer>
