--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html">Work </a>
+                <a class="nav-link" href="work.html">Charity </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html"> Category </a>
+                <a class="nav-link" href="category.html"> Knowledge </a>
               </li>
             </ul>
           </div>
@@ -155,7 +155,7 @@
             <div class="col-md-3 col-lg-2">
               <div class="info_link-box">
                 <h5>
-                  Useful Link
+                  Quick Navigation
                 </h5>
                 <ul>
                   <li class=" active">
@@ -165,10 +165,10 @@
                     <a class="" href="about.html">About </a>
                   </li>
                   <li class="">
-                    <a class="" href="work.html">Work </a>
+                    <a class="" href="work.html">Charity </a>
                   </li>
                   <li class="">
-                    <a class="" href="category.html">Category </a>
+                    <a class="" href="category.html">Knowledge </a>
                   </li>
                 </ul>
               </div>
@@ -180,7 +180,9 @@
                 Created By
               </h5>
               <p>
-                Sophie Ren & Loretta Bai
+                Sophie Ren <hr>
+                & <hr>
+                Loretta Bai
               </p>
             </div>
 
