--- a/index.html
+++ b/index.html
@@ -49,22 +49,12 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html">Work </a>
+                <a class="nav-link" href="work.html">Charity </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html"> Category </a>
+                <a class="nav-link" href="category.html"> Knowledge </a>
               </li>
             </ul>
-            <div class="user_option">
-              <a href="">
-                <span>
-                  Login
-                </span>
-              </a>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
           </div>
           <div>
             <div class="custom_menu-btn ">
@@ -121,7 +111,7 @@
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="frontpage/plastic.jpg" alt="">
                   </div>
                 </div>
               </div>
@@ -144,7 +134,7 @@
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="frontpage/carbon.png" alt="">
                   </div>
                 </div>
               </div>
@@ -167,7 +157,7 @@
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="frontpage/vertebrate.jpg" alt="">
                   </div>
                 </div>
               </div>
@@ -296,106 +286,6 @@
 
   <!-- end category section -->
 
-
-  <!-- freelance section -->
-
-  <section class="freelance_section ">
-    <div id="accordion">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <div class="detail-box">
-              <div class="heading_container">
-                <h2>
-                  Work Freelaner Has Done
-                </h2>
-              </div>
-              <div class="tab_container">
-                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  <div class="img-box">
-                    <img src="images/f1.png" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      $250 Million
-                    </h5>
-                    <h3>
-                      Paid to Freelancers
-                    </h3>
-                  </div>
-                </div>
-                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  <div class="img-box">
-                    <img src="images/f2.png" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      2 Million
-                    </h5>
-                    <h3>
-                      Paid Invoices
-                    </h3>
-                  </div>
-                </div>
-                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  <div class="img-box">
-                    <img src="images/f3.png" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      700,000
-                    </h5>
-                    <h3>
-                      Worldwide Freelancer
-                    </h3>
-                  </div>
-                </div>
-                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                  <div class="img-box">
-                    <img src="images/f4.png" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      98%
-                    </h5>
-                    <h3>
-                      Customer <br>
-                      Satisfaction Rate
-                    </h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseFour" aria-labelledby="headingfour" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end freelance section -->
-
   <!-- client section -->
 
   <section class="client_section layout_padding">
@@ -477,7 +367,7 @@
             <div class="col-md-3 col-lg-2">
               <div class="info_link-box">
                 <h5>
-                  Useful Link
+                  Quick Navigation
                 </h5>
                 <ul>
                   <li class=" active">
@@ -487,11 +377,10 @@
                     <a class="" href="about.html">About </a>
                   </li>
                   <li class="">
-                    <a class="" href="work.html">Work </a>
+                    <a class="" href="work.html">Charity </a>
                   </li>
                   <li class="">
-                    <a class="" href="category.html">Category </a>
-                  </li>
+                    <a class="" href="category.html">Knowledge </a>
                 </ul>
               </div>
             </div>
@@ -502,7 +391,9 @@
                 Created By
               </h5>
               <p>
-                Sophie Ren & Loretta Bai
+                Sophie Ren <hr>
+                & <hr>
+                Loretta Bai
               </p>
             </div>
 
