--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="col-lg-9 col-md-10 mx-auto">
           <div class="heading_container">
             <h2>
-              
+              Famous Young Activists
             </h2>
           </div>
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -302,10 +302,10 @@
               <div class="carousel-item active">
                 <div class="detail-box">
                   <h4>
-                    John Hissona
+                    Xiye Bastida
                   </h4>
                   <p>
-                    passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If youThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in s
+                    Xiye Bastida is a Mexican indigenous environmental activist and one of the organizers of the Fridays for Future youth climate strike movement. She is known for her advocacy on climate justice issues, particularly highlighting the disproportionate impact of climate change on marginalized communities. Bastida has spoken at various international forums, including the United Nations Climate Action Summit, urging world leaders to take urgent action to address the climate crisis.
                   </p>
                   <img src="images/quote.png" alt="">
                 </div>
@@ -313,10 +313,10 @@
               <div class="carousel-item">
                 <div class="detail-box">
                   <h4>
-                    John Hissona
+                    Isra Hirsi
                   </h4>
                   <p>
-                    passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If youThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in s
+                    Isra Hirsi is an American environmental activist and co-founder of the U.S. Youth Climate Strike movement. As a teenager, she has been instrumental in mobilizing young people across the United States to demand action on climate change. Hirsi has organized rallies, marches, and other events to raise awareness about environmental issues and push for policy changes at the local, state, and national levels.
                   </p>
                   <img src="images/quote.png" alt="">
                 </div>
@@ -324,10 +324,10 @@
               <div class="carousel-item">
                 <div class="detail-box">
                   <h4>
-                    John Hissona
+                    Licypriya Kangujam
                   </h4>
                   <p>
-                    passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If youThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in s
+                    Licypriya Kangujam is an Indian climate activist who began her environmental advocacy at the age of seven. She is known for her campaign to raise awareness about climate change and call for action from policymakers. Kangujam has participated in numerous climate strikes and protests, advocating for stronger environmental policies and climate adaptation measures, particularly in vulnerable regions like India and other developing countries.
                   </p>
                   <img src="images/quote.png" alt="">
                 </div>
